2001-08-20  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-icon-factory.c
	(nautilus_icon_factory_get_icon_for_file):
	add a nautilus_file_is_local() before loading desktop files; this
	breaks Nautilus links, which are actually async. We lost the 
	is_local() check on .desktop files because the .desktop files were
	added as a nautilus link backend, and nautilus links were async,
	so people were using them in nonlocal cases, but we deleted the
	.desktop codepath in favor of the nautilus link codepath.

	(nautilus_icon_factory_get_icon_for_file): Do same processing for
	.directory image URI that we do for .desktop image URI, allowing
	us to handle X-Nautilus-Icon in .directory
	(image_uri_to_name_or_uri): function with the common processing

2001-08-17  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (prepend_automatic_emblem_names):
	Don't set trash emblems. They cost to much. (This patch cannot go into
	mainline.)

2001-08-17  Havoc Pennington  <hp@redhat.com>

	* components/mozilla/nautilus-mozilla-embed-extensions.cpp
	(mozilla_get_document_title): add this from Galeon
	
	* components/mozilla/nautilus-mozilla-embed-extensions.cpp
	(mozilla_unicode_to_locale): copy code from Galeon to use Mozilla
	conversion features to convert unicode to locale encoding

	* components/mozilla/nautilus-mozilla-content-view.c
	(mozilla_title_changed_callback): set title in locale encoding
	
2001-08-17  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-thumbnails.c (nautilus_get_thumbnail_uri):
	Always look for local thumbnails. Even on NFS.

2001-08-16  Havoc Pennington  <hp@redhat.com>

	* libnautilus-private/nautilus-global-preferences.c: default tree
	to "show only directories" mode. It's slow to show files, not to
	mention useless. (Showing files is just some sort of poor
	substitute for multiple pane view.)

2001-08-15  Havoc Pennington  <hp@redhat.com>
